# fusion-simulation

./: .gitignore  05_overnight-sweep.md  AGENTS.md  README.md  pyproject.toml  reactor-geometry.py  run-webapp.sh
.docs/: architecture.md  conventions.md  current-focus.md  module-map.md
data/: plasma_surface.ply
data/benchmarks/2026_07_13_00_49_05_soft-bc-reproduction_model-selection-benchmark/: kpis.json  network.flax  training.csv
data/benchmarks/2026_07_13_01_18_41_hard-bc-unoptimized_model-selection-benchmark/: kpis.json  network.flax
data/benchmarks/2026_07_13_06_59_27_hard-bc-tuned-schedule_model-selection-benchmark/: kpis.json  training.csv
data/benchmarks/model_selection_benchmark/: learnings.md  (+1 more)
data/networks/: pinn_2026_04_06_12_57_827a01a.flax  pinn_2026_04_06_12_57_827a01a.json  pinn_76d36b4_swish.flax  pinn_76d36b4_swish.json  pinn_9236146_tanh.flax
docs/: 02_pinn_engine.md  03_neural_architecture.md  geometry.md  sources.md
docs/evaluation/: kpi-accuracy-benchmark.md
docs/performance/: batch-kpi-residual-eval.md  cache-boundary-fourier-fit.md  fuse-axis-operator-pass.md  fuse-radial-jvp.md  remove-redundant-loss-remat.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  plotly-cartesian-dist-min.d.ts  plotly-lib.d.ts  plotly.ts  plots.tsx  shiki.ts  store.ts  styles.css  ui.tsx
scripts/: kpi_accuracy_benchmark.py  psi_stats.py  reevaluate_hpo_kpis.py  run_long_training.sh  run_optuna_mlp_256x5.py  run_overnight_sweep.sh  run_round2.sh  run_sweep.py
src/: reactor-geometry.py  reactor_geometry.py  render-fusion-simulation.py  render.py  toroidal_geometry.py
src/api/: benchmark.py  geometry.py  main.py  network.py  schemas.py  state.py
src/engine/: benchmark_report.py  model_evaluation.py  network.py  network_manager.py  optimize-network-hparams.py  optimize_network_optuna.py  physics.py  plasma.py  residual_correction.py  stellarator.py
src/lib/: config.py  geometry_config.py  linalg_utils.py  logger.py  network_config.py  optuna_tui.py  run_artifacts.py  utils.py  visualization.py
src/streamlit/: app.py  network_utils.py  utils.py
tests/: test_early_stopping.py  test_run_artifacts.py
tests/fixtures/: refactor_golden.json
(+115 files in other folders)
