[project]
name = "fusion-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.3.1",
  "plotly>=6.2.0",
  "pyvista>=0.45.3",
]

[tool.ruff]
target-version = "py312"
respect-gitignore = true
line-length = 100

# Enable linting categories
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # bugbear (common bugs)
    "C4", # flake8-comprehensions
    "TCH",  # type-checking hygiene
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations (type hint enforcement)
    "ARG",  # flake8-unused-arguments
    "RUF"  # Ruff-specific rules
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["src"]  # Your internal package
section-order = ["standard-library", "third-party", "first-party", "local-folder"]

[tool.black]
line-length = 100
target-version = ['py312']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]