[project]
name = "fusion-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flax>=0.12.2",
  "jax>=0.8.2",
  "numpy>=2.3.1",
  "plotly>=6.2.0",
  "pyvista>=0.45.3",
  "ruff>=0.12.7",
  "scipy>=1.16.1",
  "scipy-stubs>=1.16.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
respect-gitignore = true
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "C4",  # comprehensions
  "TCH", # type-checking hygiene
  "SIM", # simplify
  "ANN", # type hints
  "ARG", # unused arguments
  "RUF"  # Ruff-native rules
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["src"]
section-order = ["standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Enables Ruff formatter with default options (Black-compatible)
